--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- CSS Personal -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Iconos de Fontawesome -->
+    <script src="https://kit.fontawesome.com/b3431ac19b.js" crossorigin="anonymous"></script>
 
 
 </head>
