--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
                 <a class="nav-link" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Proyectos</a>
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Programas</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                    
+                  <li><a class="dropdown-item" href="discapacidad">Discapacidad</a>
+                      <a class="dropdown-item" href="proyectoempatia">Proyecto Construyendo Puentes de Empatía</a> 
+                  </li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="proyectoempleabilidad">Programa 2</a></li>
+
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="proyecto3">Programa 3</a></li>
                 </ul>
               </li>
               <li class="nav-item">
