--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </li>
              <!--Donaciones-->
               <li class="nav-item"> <a class="nav-link" href="donaciones.html">Donaciones</a></li>
+              <!--Contactos-->
               <li class="nav-item"> <a class="nav-link" href="contactos.html">Contactos</a></li>
         </ul>
             <form class="d-flex" role="search">
