--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
               <li class="nav-item"> <a class="nav-link" href="donaciones.html">Donaciones</a></li>
               <!--Contactos-->
               <li class="nav-item"> <a class="nav-link" href="contactos.html">Contactos</a></li>
+              <!--Redes Sociales-->
+              <li class="nav-item"> <a class="nav-link" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+              
+
+
+
+
+
         </ul>
-            <form class="d-flex" role="search">
+             <!-- <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> -->
         </div>
         </div>
     </nav>
