--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" id="menu">
     <div class="container-fluid">
         <!--Logo-->
-          <a class="navbar-brand" href="#"><img src="/Img/Logo Pequeño.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="/Img/Logo Pequeño.png" alt="" width="200" height="200"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
