--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!--Inicio-->
                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
             <!--Nosotros-->
-               <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+               <li class="nav-item"><a class="nav-link" href="nosotros.html" target="_blank">Nosotros</a></li>
             <!--Programas-->
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="programas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Programas</a>
                <ul class="dropdown-menu">
@@ -37,19 +37,19 @@
                </ul>
             </li>
              <!--Donaciones-->
-              <li class="nav-item"> <a class="nav-link" href="donaciones.html">Donaciones</a></li>
+              <li class="nav-item"> <a class="nav-link" href="donaciones.html" target="_blank">Donaciones</a></li>
               <!--Contactos-->
-              <li class="nav-item"> <a class="nav-link" href="contactos.html">Contactos</a></li>
+              <li class="nav-item"> <a class="nav-link" href="contactos.html" target="_blank">Contactos</a></li>
               <!--Redes Sociales-->
-              <li class="nav-item"> <a class="nav-link" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-              
-
-
-
-
-
-        </ul>
-             <!-- <form class="d-flex" role="search">
+              <li class="nav-item"> <a class="nav-link" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook" style="color: #0f62f0;"></i></a></li>
+              <li class="nav-item"> <a class="nav-link" href="https://wa.me/3108281511?text=%C2%A1Hola!%0AQuieres%20saber%20m%C3%A1s%20de%20nosotros%20no%20dudes%20en%20escribirnos%20" target="_blank"><i class="fa-brands fa-whatsapp" style="color: #00e676;"></i></a></li>
+              <li class="nav-item"> <a class="nav-link" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram" style="color: #f86ded;"></i></a></li>
+              <li class="nav-item"> <a class="nav-link" href="https://www.tiktok.com/login?lang=es" target="_blank"><i class="fa-brands fa-tiktok" style="color: #000000;"></i></a></li>
+      </ul>
+          
+               <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-warning">Donar</a>
+               <a href="https://wa.me/3108281511?text=Tienda!!" target="-blank"> <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a>
+              <!-- <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form> -->
