--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+        <ul class="navbar-nav mx-auto me-2 navbar-nav-scroll">
             <!--Inicio-->
                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
             <!--Nosotros-->
@@ -47,7 +47,7 @@
               <li class="nav-item"> <a class="nav-link" href="https://www.tiktok.com/login?lang=es" target="_blank"><i class="fa-brands fa-tiktok" style="color: #000000;"></i></a></li>
       </ul>
           
-               <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-warning">Donar</a>
+               <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a>
                <a href="https://wa.me/3108281511?text=Tienda!!" target="-blank"> <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a>
               <!-- <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
