--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Iconos de Fontawesome -->
     <script src="https://kit.fontawesome.com/b3431ac19b.js" crossorigin="anonymous"></script>
+    <!--Favicon -->
+    <link rel="shortcut icon" href="Img/Logo-Pequeño.ico" type="image/x-icon">
 </head>
 <body>
     <!--Menu y Logo-->
