--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav mx-auto me-2 navbar-nav-scroll">
             <!--Inicio-->
-               <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+               <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Inicio</a></li>
             <!--Nosotros-->
                <li class="nav-item"><a class="nav-link" href="nosotros.html" target="_blank">Nosotros</a></li>
             <!--Programas-->
