--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Img/Niños.jpg" class="d-block w-100" alt="...">
+          <img src="Img/Niños.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="Img/Ayudas.jpg" class="d-block w-100" alt="...">
+          <img src="Img/Ayudas.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="Img/Ayuda2.jpg" class="d-block w-100" alt="...">
+          <img src="Img/Ayuda2.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="Img/Donación1.jpg" class="d-block w-100" alt="...">
+          <img src="Img/Donación1.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="Img/Donación2.jpg" class="d-block w-100" alt="...">
+          <img src="Img/Donación2.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
