--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" id="menu">
     <div class="container-fluid">
         <!--Logo-->
-          <a class="navbar-brand" href="#"><img src="/Img/Logo Pequeño.png" alt=""  id="logo"></a>
+          <a class="navbar-brand" href="#"><img src="/Img/Logo.png" alt=""  id="logo" width="100" height="94"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
