--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
-            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
         <div class="carousel-item">
@@ -107,7 +107,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
-            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
         <div class="carousel-item">
@@ -115,7 +115,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
-            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
         <div class="carousel-item">
@@ -123,7 +123,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
-            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
         <div class="carousel-item">
@@ -131,7 +131,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
-            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
       </div>
@@ -147,28 +147,29 @@
 
     <!--Card 1-->
     
+    <h2> Campo de desarrollo</h2>
     <div class="card" style="width: 18rem;">
-      <img src="Img/" class="card-img-top" alt="...">
+      <img src="Img/PsicologíaClínica.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Salud</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <!--Card 2-->
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="Img/PsicologíaEducativa.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Educativa</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <!--Card 3-->
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="Img/PsicologíaSocial.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Social</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
