--- a/index.html
+++ b/index.html
@@ -146,10 +146,11 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
-    <!--Card 1-->
+    <!--Campos de Desarrollo-->
     
-    <h2> Campo de desarrollo</h2>
+    <div id="campos" >
+    <h2 class="desarrollo"> Campo de desarrollo</h2>
+    <!--Card 1-->
     <div class="card" style="width: 18rem;">
       <img src="Img/PsicologíaClínica.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -162,7 +163,7 @@
     <div class="card" style="width: 18rem;">
       <img src="Img/PsicologíaEducativa.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Educativa</h5>
+        <h5 class="card-title">Educativo</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
@@ -176,6 +177,7 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
+  </div>
   
 
 
