--- a/index.html
+++ b/index.html
@@ -147,37 +147,50 @@
       </button>
     </div>
     <!--Campos de Desarrollo-->
+    <div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="campos">
+      <h2 class="desarrollo">Campos de Desarrollo</h2>
+      <div class="col">
+        <div class="card h-100">
+          <img src="Img/PsicologíaClínica.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Salud</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Ver más</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="Img/PsicologíaEducativa.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Educativo</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Ver más</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="Img/PsicologíaSocial.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Social</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Ver más</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+      </div>
+    </div>
     
-    <div id="campos" >
-    <h2 class="desarrollo"> Campo de desarrollo</h2>
-    <!--Card 1-->
-    <div class="card" style="width: 18rem;">
-      <img src="Img/PsicologíaClínica.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Salud</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <!--Card 2-->
-    <div class="card" style="width: 18rem;">
-      <img src="Img/PsicologíaEducativa.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Educativo</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <!--Card 3-->
-    <div class="card" style="width: 18rem;">
-      <img src="Img/PsicologíaSocial.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Social</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
+   
   
 
 
