--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
          <!--Videos-->
 
          <div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="videos">
-          <h2 class="desarrollo"> Vídeos</h2>
+          <h2 class="videos"> Vídeos</h2>
           <div class="col">
             <div class="card h-100">
               <video src="Img/Grupos de apoyo.mp4" controls class="card-img-top" alt="..."></video>
