--- a/index.html
+++ b/index.html
@@ -329,7 +329,18 @@
               <i class="fa-solid fa-at"></i>
               Email: info@fundacionfebe.com
             </p>
+            <p class="footer__info">
+              <i class="fa-solid fa-mobile-screen-button"></i>
+              Celular: 3108281511
+            </p>
+            <p class="footer__info">
+              <i class="fa-solid fa-map-location-dot"></i>
+              Dirección: Carrera 89B # 13-23
+            </p>
           </div>
+        </div>
+        <div class="footer-credits">
+          &copy; 2023. Fundación Febe Colombia - All rights reserved - Desing <a href="#" target="_blank">Laura Alejandra</a>
         </div>
 
 
