--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -189,15 +189,17 @@
       </div>
     </div>
 
-    <!--Sección -->
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3" id="jumbotron">
+    <!--Sección --
+       <div class="p-5 mb-4 bg-body-tertiary rounded-3" id="jumbotron">
          <div class="container-fluid py-5">
          <h1 class="display-5 fw-bold">Laura Alejandra</h1>
          <p class="col-md-8 fs-4"> Cofundadora</p>
          <button class="btn btn-dark btn-lg notica">Perfil Prpfesional</button>
         </div>
     </div>
-    <!-- Main -->
+    >
+   
+    <!- Main -->
     <main>
          <div class="container py-4">
           <header class="pb-3 mb-4 border-bottom">
