--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="Mapa sinóptico Laura Rivera.pdf" target="_blank">Discapacidad</a>
                   <ul>
-                    <li><a class="dropdown-item" href="">Proyecto 1</a></li>
+                    <li><a class="dropdown-item" href="Mapa sinóptico Laura Rivera.pdf" target="_blank">Proyecto 1</a></li>
                     <li><a class="dropdown-item" href="Mapa sinóptico Laura Rivera.pdf" target="_blank">Proyecto 2</a></li>
                     <li><a class="dropdown-item" href="Mapa sinóptico Laura Rivera.pdf" target="_blank">Proyecto 3</a></li>
                     
