--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" id="menu">
       <div class="container-fluid">
         <!--Logo-->
-        <a class="navbar-brand" href="#"><img src="/Img/Logo2.png" alt=""  id="logo" width="100" height="94"></a>
+        <a class="navbar-brand" href="index.html"><img src="/Img/Logo2.png" alt=""  id="logo" width="100" height="94"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,9 +85,8 @@
           <h2 class="qsomos">¿Quiénes somos?</h2>
           
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Misión
-            </button>
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne"><h2> Misión</h2>
+          </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
@@ -98,7 +97,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-              Visión
+              <h2>Visión</h2>
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -110,20 +109,20 @@
         </div>
       </div>
      <!-- Equipo de trabajo-->
-     <div class="equipo">
-      <h2 class="etrabajo">Equipo de Trabajo</h2>
-      <img src="Img/Jane Dahiana.png" alt="" class="card-img-top">
+     <div id="equipo">
+      <h2 id="tituloetrabajo">Equipo de Trabajo</h2>
+      <img src="Img/Jane Dahiana.png" alt="" class="img-trabajo">
       <h3>Jane Dahiana Chaverra Giraldo</h3>
       <h4>Psicóloga</h4>
      </div>
-     <div class="equipo">
-      <img src="Img/Maria Jose.jpeg" alt="" class="card-img-top">
+     <div id="equipo">
+      <img src="Img/Maria Jose.jpeg" alt="" class="img-trabajo">
       <h3>María Jose Chaverra Giraldo</h3>
       <h4>Abogada</h4>
      </div>
 
-     <div class="equipo">
-      <img src="Img/Laura Alejandra.png" alt="" class="card-img-top">
+     <div id="equipo">
+      <img src="Img/Laura Alejandra.png" alt="" class="img-trabajo">
       <h3>Laura Alejandra Rivera Usuga</h3>
       <h4>Psicóloga</h4>
      </div>
