--- a/contactos.html
+++ b/contactos.html
@@ -13,12 +13,12 @@
     <!--Favicon -->
     <link rel="shortcut icon" href="Img/Logo-Pequeño ICO.ico" type="image/x-icon">
 </head>
-<body>
+<body id="bodycontacto">
     <!--Menu y Logo-->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" id="menu">
       <div class="container-fluid">
         <!--Logo-->
-        <a class="navbar-brand" href="#"><img src="/Img/Logo2.png" alt=""  id="logo" width="100" height="94"></a>
+        <a class="navbar-brand" href="index.html"><img src="/Img/Logo2.png" alt=""  id="logo" width="100" height="94"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
         </button>
