--- a/donaciones.html
+++ b/donaciones.html
@@ -13,12 +13,12 @@
     <!--Favicon -->
     <link rel="shortcut icon" href="Img/Logo-Pequeño ICO.ico" type="image/x-icon">
 </head>
-<body>
+<body id="bodydonaciones">
     <!--Menu y Logo-->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" id="menu">
       <div class="container-fluid">
         <!--Logo-->
-        <a class="navbar-brand" href="#"><img src="/Img/Logo2.png" alt=""  id="logo" width="100" height="94"></a>
+        <a class="navbar-brand" href="index.html"><img src="/Img/Logo2.png" alt=""  id="logo" width="100" height="94"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
         </button>
@@ -77,11 +77,30 @@
           </div>
         </div>
     </nav>
+    <!--Donar -->
+     <div class="donaciones"> 
+      <h3> Realiza una donación ahora </h3>
+      <h4>¿Cuánto vas a donar?</h4>
+        <div id="valor"> <h2>$50.000</h2>
+          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+        </div>
+        <div id="valor"><h2> $100.000</h2> 
+          <button type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+        </div>
+        <div id="valor"> <h2> $150.000</h2> 
+          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+        </div>
+        <div id="valor"> <h2> $200.000</h2> 
+          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+        </div>
+        <div id="valor"> <h2>Otro valor</h2> 
+          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+        </div>
+     </div>
 
-    <!--Formulario -->
-  
-      <section id="Contacto" class="container">
-        <h2>Contactos</h2>
+<!--Formulario -->
+      <section id="Contactodonaciones" class="containerdonaciones">
+        <h2>Quieres más información sobre las donaciones</h2>
          <!--se utiliza la etiqueta form-->
           <form action="mailton:canaldea00@gmail.com" method="post">
             <div>
