--- a/donaciones.html
+++ b/donaciones.html
@@ -82,25 +82,25 @@
       <h3> Realiza una donación ahora </h3>
       <h4>¿Cuánto vas a donar?</h4>
         <div id="valor"> <h2>$50.000</h2>
-          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+          <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-success">Donar</a></div>
         </div>
         <div id="valor"><h2> $100.000</h2> 
-          <button type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+          <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-success">Donar</a></div>
         </div>
         <div id="valor"> <h2> $150.000</h2> 
-          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+          <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-success">Donar</a></div>
         </div>
         <div id="valor"> <h2> $200.000</h2> 
-          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+          <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-success">Donar</a></div>
         </div>
         <div id="valor"> <h2>Otro valor</h2> 
-          <button  type="button" class="btn btn-success" id="bdonar">¡Donar!</button>
+          <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-success">Donar</a></div>
         </div>
      </div>
 
 <!--Formulario -->
       <section id="Contactodonaciones" class="containerdonaciones">
-        <h2>Quieres más información sobre las donaciones</h2>
+        <h2>Quieres más información sobre las donaciones</h2> 
          <!--se utiliza la etiqueta form-->
           <form action="mailton:canaldea00@gmail.com" method="post">
             <div>
