--- a/index.html
+++ b/index.html
@@ -98,40 +98,40 @@
         <div class="carousel-item active">
           <img src="Img/Niños.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
+            <h5>Por la niñez</h5>
+            <p>“Para los niños trabajamos, porque los niños son los que saben querer, porque los niños son la esperanza del mundo.” </p>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Saber más</a></div>
           </div>
         </div>
         <div class="carousel-item">
           <img src="Img/Ayudas.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
-            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
+            <h5>!Ayudar¡</h5>
+            <p>“Mucha gente pequeña, en lugares pequeños, haciendo cosas pequeñas, puede cambiar el mundo.”  Eduardo Galeano</p>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Saber más</a></div>
           </div>
         </div>
         <div class="carousel-item">
           <img src="Img/Ayuda2.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
+            <h5>!Unidos¡</h5>
+            <p>“Hay que unirse, no para estar juntos, sino para hacer algo juntos”.Juan Donoso Cortés.</p>
+            <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Saber más</a></div>
           </div>
         </div>
         <div class="carousel-item">
           <img src="Img/Donación1.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5>!Donar¡</h5>
+            <p>“Si ayudo a una sola persona a tener esperanza, no habré vivido en vano.” Martin Luther King.</p>
             <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
         <div class="carousel-item">
           <img src="Img/Donación2.jpg" class="d-block w-100 alto-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5>Por un mundo major</h5>
+            <p>“Nosotros tenemos que ser el cambio que queremos ver en el mundo”. Gandhi.</p>
             <div class="boton-comprar"><a href="https://wa.me/3108281511?text=Donar!!" target="-blank" class="btn btn-info">Donar</a></div>
           </div>
         </div>
